# SoftGPU

./: .e2e_depth_test.ppm  .e2e_mad_verification.ppm  .e2e_multi_triangle.ppm  .e2e_rgb_triangle.ppm  .e2e_warp_scheduling.ppm  .gitignore  CLAUDE.md  CMakeLists.txt  DEV_LOG_BAK.md  LICENSE  MEETING_NOTES.md  PHASE0_DESIGN.md  PHASE0_REVIEW.md  PHASE0_REVIEW_FIXED.md  README.md  RELEASE_NOTES.md  TEAM_RULES.md  bug分析.md  dev_log_mac.md  green_triangle.ppm  测试用例缺失分析.md
.claude/: settings.json
.github/workflows/: build.yml  coverage.yml
build_asan/: CMakeCache.txt  Makefile  cmake_install.cmake
build_asan/src/: Makefile  cmake_install.cmake
build_asan/src/app/: Makefile
build_asan/tests/: Makefile  cmake_install.cmake
build_check/: CMakeCache.txt  Makefile  cmake_install.cmake
build_check/src/: Makefile  cmake_install.cmake
build_check/tests/: Makefile  cmake_install.cmake
build_g1_tests/: CMakeCache.txt  Makefile  cmake_install.cmake
build_g1_tests/src/: Makefile  cmake_install.cmake
build_g1_tests/tests/: Makefile  cmake_install.cmake
build_p0/: CMakeCache.txt  Makefile  cmake_install.cmake
build_p0/src/: Makefile  cmake_install.cmake
build_p0/tests/: Makefile  cmake_install.cmake
build_quick/: CMakeCache.txt  Makefile  cmake_install.cmake
build_quick/src/: Makefile  cmake_install.cmake
build_quick/tests/: Makefile  cmake_install.cmake
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/src/: Makefile  cmake_install.cmake
build_test/tests/: Makefile  cmake_install.cmake
build_test2/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test2/src/: Makefile  cmake_install.cmake
build_test2/tests/: Makefile  cmake_install.cmake
build_verify/: CMakeCache.txt
docs/: AGENT_TEAM_PLAN.md  CI_WORKFLOW.md  CODE_SMELL_REPORT.md  DESIGN.md  DESIGN_CN.md  FRAGMENT_SHADER_ISA_DESIGN.md  ISA_DESIGN.md  ISSUES.md  PROJECT_RETROSPECTIVE.md  STAGE_DETAILS.md  TEAM_NAMING.md  TEST_DESIGN_COMPREHENSIVE.md  VS_ISA_DESIGN.md  VS_ISA_INTEGRATION_DESIGN.md
docs/phase-acceptance/: PHASE_ACCEPTANCE.md
shared/design/: CI_COVERAGE_DESIGN.md  PHASE1_DESIGN.md  PHASE2_DESIGN.md  PHASE3_DESIGN.md  PHASE4_DESIGN.md  PHASE5_DESIGN.md  ROADMAP_v1.3_plus.md  phase1_part_aa  phase1_part_ab  phase1_part_ac  v0.2_REFACTORING_DESIGN.md  v1.4_DESIGN.md
shared/meta/: BUGS.md  task_queue.txt
src/: CMakeLists.txt  main.cpp
src/app/: Application.hpp  CMakeLists.txt
src/benchmark/: BenchmarkResult.cpp  BenchmarkResult.hpp  BenchmarkRunner.cpp  BenchmarkRunner.hpp  CMakeLists.txt
src/core/: CMakeLists.txt  Common.hpp  HardwareConfig.hpp  Math.hpp  MemorySubsystem.cpp  MemorySubsystem.hpp  PipelineTypes.hpp  RenderCommand.hpp  ShaderRegs.hpp
src/isa/: CMakeLists.txt  Decoder.cpp  Decoder.hpp  ExecutionUnits.cpp  ExecutionUnits.hpp  ISA.hpp  Instruction.cpp  Instruction.hpp  Interpreter.cpp  Interpreter.hpp  Opcode.cpp  Opcode.hpp  RegisterFile.cpp  RegisterFile.hpp  interpreter_v2_5.hpp  isa_v2_5.hpp  isa_v2_5.hpp.gch  register_file_v2_5.hpp
src/pipeline/: CMakeLists.txt  RenderPipeline.cpp  RenderPipeline.hpp  ShaderCore.cpp  ShaderCore.hpp  TextureBuffer.cpp  TextureBuffer.hpp  WarpScheduler.cpp  WarpScheduler.hpp
src/platform/: CMakeLists.txt  Window.cpp  Window.hpp
src/profiler/: BottleneckDetector.cpp  BottleneckDetector.hpp  CMakeLists.txt  FrameProfiler.cpp  FrameProfiler.hpp  IProfiler.hpp  ProfilerUI.cpp  ProfilerUI.hpp
src/renderer/: CMakeLists.txt  ImGuiRenderer.hpp  Renderer.hpp
src/stages/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.hpp  EarlyZ.cpp  EarlyZ.hpp  FragmentShader.cpp  FragmentShader.hpp  Framebuffer.cpp  Framebuffer.hpp  IStage.hpp  PrimitiveAssembly.cpp  PrimitiveAssembly.hpp  Rasterizer.cpp  Rasterizer.hpp  TileBuffer.cpp  TileBuffer.hpp  TileWriteBack.cpp  TileWriteBack.hpp  TilingStage.cpp  TilingStage.hpp  VSOutputAssembler.cpp  VSOutputAssembler.hpp  VertexShader.cpp  VertexShader.hpp
src/test/: CMakeLists.txt  OBJModelScene.cpp  OBJModelScene.hpp  TestScene.cpp  TestScene.hpp  TestSceneBuilder.cpp  TestSceneBuilder.hpp
src/utils/: CMakeLists.txt  FrameDumper.cpp  FrameDumper.hpp  OBJLoader.cpp  OBJLoader.hpp
tests/: CMakeLists.txt
tests/benchmark/: BenchmarkRunner_test.cpp  CMakeLists.txt
tests/core/: CMakeLists.txt  math_test.cpp  test_isa.cpp  test_isa_v2_5.cpp  test_memory.cpp  test_vsisa_phase1.cpp  test_vsisa_phase2.cpp  test_vsisa_phase3.cpp  test_warp.cpp
tests/e2e/: CMakeLists.txt  E2E_Framework.cpp  E2E_Framework.hpp  TEST_CASES_v1.4.md  scene_001_green_triangle.cpp  scene_002_rgb_interpolation.cpp  scene_003_depth_test.cpp  scene_004_mad_verification.cpp  scene_005_multi_triangle.cpp  scene_006_warp_scheduling.cpp  scene_007_triangle_1tri.cpp  scene_008_triangle_cube.cpp  scene_009_triangle_cubes100.cpp  scene_010_triangle_sponzastyle.cpp  scene_011_pbr_material.cpp  scene_012_depth_complexity.cpp  scene_013_texture_sampling.cpp  scene_014_textured_triangle.cpp  scene_015_textured_teapot.cpp  scene_016_obj_model.cpp  scene_017_triangle_strip.cpp  scene_018_primitive_restart.cpp
tests/e2e/golden/: scene001_green_triangle.ppm  scene002_rgb_interpolation.ppm  scene003_depth_test.ppm  scene004_mad_verification.ppm  scene005_multi_triangle.ppm  scene006_warp_scheduling.ppm  scene007_triangle_1tri.ppm  scene008_triangle_cube.ppm  scene009_triangle_cubes100_clang.ppm  scene009_triangle_cubes100_gcc.ppm  scene012_depth_complexity.ppm  scene013_texture_sampling.ppm  scene014_textured_triangle.ppm  scene015_utah_teapot.ppm  scene016_obj_model.ppm  scene017_triangle_strip_clang.ppm  scene018_primitive_restart_clang.ppm
tests/isa/: CMakeLists.txt  test_golden_isa.cpp
tests/isa/golden_runner/: GoldenTestCase.hpp  GoldenTestCases.hpp  GoldenTestRunner.hpp
tests/platform/: CMakeLists.txt  window_test.cpp
tests/stages/: CMakeLists.txt  test_FragmentShader.cpp  test_Framebuffer.cpp  test_Integration.cpp  test_PipelineVerification.cpp  test_PrimitiveAssembly.cpp  test_Rasterizer.cpp  test_TileBuffer.cpp  test_VertexShader.cpp
tests/test/: CMakeLists.txt  TestScene_test.cpp
(+307 files in other folders)
