# ============================================
# src - SoftGPU 源码子目录
# ============================================
add_subdirectory(core)
add_subdirectory(isa)
add_subdirectory(platform)
add_subdirectory(renderer)
add_subdirectory(stages)
add_subdirectory(utils)
add_subdirectory(pipeline)
add_subdirectory(profiler)
add_subdirectory(app)
add_subdirectory(test)
add_subdirectory(benchmark)
